# graph-play

./: README.md  flake.nix  graph-play.cabal  hie.yaml  scripts.nix
src/Graph/: Parse.hs  Print.hs  Utils.hs
test/: Property.hs  TestUtils.hs
test/Graph/: G01ParsePrintSpec.hs
